src/internal/vm/snapshots/hebi__internal__vm__tests__global_builtin_functions__to_float__bad_input.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
to_float({})


# Result:
runtime error: cannot convert `<table>` to a float
