src/internal/vm/snapshots/hebi__internal__vm__tests__global_builtin_functions__to_float__float.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
to_float(10.5)


# Result:
Float(
    10.5,
)
