src/internal/vm/snapshots/hebi__internal__vm__tests__global_builtin_functions__to_float__int.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
to_float(10)


# Result:
Float(
    10.0,
)
